--- a/src/views/ejs/checkout.ejs
+++ b/src/views/ejs/checkout.ejs
@@ -57,10 +57,10 @@
           <table class="products-order">
             <thead>
               <tr>
-                <th width="50%">Order Summary</th>
-                <th width="16%">Quantity</th>
-                <th width="16%">Price</th>
-                <th width="16%">Total</th>
+                <th width="40%">Order Summary</th>
+                <th>Quantity</th>
+                <th>Price</th>
+                <th>Total</th>
               </tr>
             </thead>
             <tbody>
@@ -88,6 +88,43 @@
               <%})%>
             </tbody>
           </table>
+        </div>
+        <div id="vbox2">
+          <div id="vpaymentname">
+            <h2>Billing Summary</h2>
+          </div>
+
+          <div id="vprice">
+            <p>Items total</p>
+            <p>₹ <span class="displaypricev2"><%=sum%></span>.00</p>
+          </div>
+          <div id="vprice">
+            <p>Shipping</p>
+            <p>₹ 0.00</p>
+          </div>
+          <div id="vprice">
+            <p>Duties, taxes & fees</p>
+            <p>₹ 00.00 (Free)</p>
+          </div>
+          <div id="vprice">
+            <h1><b>Total For Your Order</b></h1>
+            <h1>
+              <b>₹ <span class="displaypricev3"><%=sum%></span>.00</b>
+            </h1>
+          </div>
+
+          <p id="vall">
+            All applicable duties, taxes and fees are included in the total
+            amount of your order. We guarantee you will not be required to pay
+            any additional cost on delivery.
+          </p>
+          <p id="vtopspace">
+            By clicking place order and pay, you agree to purchase your item(s)
+            from Global-e as merchant of record for this transaction, on
+            Global-e’s Terms and Conditions and Privacy Policy. Global-e is an
+            international fulfilment service provider to Theory.
+          </p>
+          <button id="vbutton" form="form1">PAY AND PLACE ORDER</button>
         </div>
       </div>
       <div id="vamountshow">
@@ -161,6 +198,7 @@
                       type="text"
                       name="name"
                       value=""
+                      required
                     />
                   </td>
                 </div>
@@ -184,6 +222,7 @@
                       type="text"
                       name="email"
                       value=""
+                      required
                     />
                   </td>
                 </div>
@@ -199,6 +238,7 @@
                       type="text"
                       name="phone"
                       value=""
+                      required
                     />
                   </td>
                 </div>
@@ -271,7 +311,7 @@
         </div>
       </div>
 
-      <div id="vshipbox1">
+      <!-- <div id="vshipbox1">
         <h2>Duties & Taxes</h2>
         <div id="vboxflex3">
           <div id="vradio"><input id="radio1" type="radio" checked /></div>
@@ -286,7 +326,7 @@
             I will pay all applicable duties, taxes and fees on delivery.
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- Payment Box -->
 
@@ -416,7 +456,7 @@
           <button id="vbutton">PAY AND PLACE ORDER</button>
         </div> -->
 
-        <div id="vbox2">
+        <!-- <div id="vbox2">
           <div id="vpaymentname">
             <h2>Billing Summary</h2>
           </div>
@@ -451,8 +491,9 @@
             Global-e’s Terms and Conditions and Privacy Policy. Global-e is an
             international fulfilment service provider to Theory.
           </p>
-          <button id="vbutton" form="form1">PAY AND PLACE ORDER</button>
-        </div>
+         
+        </div> -->
+        <!-- <button id="vbutton" form="form1">PAY AND PLACE ORDER</button> -->
       </div>
 
       <!-- Footer Part -->
