--- a/src/views/ejs/accesories.ejs
+++ b/src/views/ejs/accesories.ejs
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <link
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" type="text/css" href="../styles/button.css" />
 	<link rel="stylesheet" type="text/css" href="../styles/navbar.css">
 	<link rel="stylesheet" type="text/css" href="../styles/footer.css">
     <link rel="stylesheet" type="text/css" href="../styles/womenPage.css">
@@ -64,6 +69,10 @@
     </div>
 </a>
 </div>
+<!--BUTTON ON TOP-->
+<div  id="rrewardbutton">
+    <a href="#"><i class="material-icons" style="font-size: 55px;">arrow_upward</i></i></a>
+  </div>
 
 <div class="firstSection">
     <div class="firstBox">Recommended For You</div>
@@ -324,3 +333,4 @@
 
 
 <script type="text/javascript" src="../scripts/header.js"></script>
+<script src="../scripts/fixedbutt.js"></script>
