--- a/src/views/ejs/home.ejs
+++ b/src/views/ejs/home.ejs
@@ -47,12 +47,12 @@
         </video>
 
         <div>
-          <h2>THE TREECA</h2>
+          <h2>THE DEMITRIA</h2>
           <p>
-            Our bestselling, <br />desk-to-dinner icon that <br />elevates your
-            every day.
+            An elongating flared pant that<br />
+            gives any look the right <br />amount of attitude.
           </p>
-          <a href="./pages/menproducts.html">SHOP THE TREECA PANT</a>
+          <a href="./pages/menproducts.html">SHOP THE DEMITRIA PANT</a>
         </div>
       </div>
       <div class="slider-div">
@@ -60,13 +60,12 @@
           <source src="videos/men.mp4" />
         </video>
         <div>
-          <h2>THE ZAINE</h2>
+          <h2>THE CURTIS</h2>
           <p>
-            The bestselling pant in <br />Precision Ponte—our most<br />
-            comfortable fabric innovation<br />
-            that always looks sharp.
+            Designed with an internal <br />drawstring, this tapered style<br />
+            delivers optimal ease 24/7.
           </p>
-          <a href="./pages/menproducts.html">SHOP THE ZAINE PANT</a>
+          <a href="./pages/menproducts.html">SHOP THE CURTIS PANT </a>
         </div>
       </div>
     </div>
