--- a/src/views/ejs/navbar.ejs
+++ b/src/views/ejs/navbar.ejs
@@ -118,7 +118,15 @@
                       src="https://cdn.media.amplience.net/i/theory/2.4_PANTS_FOT_W"
                       width="200px"
                     />
-                    <h4>Style Reset</h4>
+                    <h4>PANTS + PURPOSE</h4>
+                    <a href="">Shop Now</a>
+                  </div>
+                  <div>
+                    <img
+                      src="https://cdn.media.amplience.net/i/theory/2.4_S+O_FOT_W"
+                      width="200px"
+                    />
+                    <h4>Sweaters + Outerwears<h4>
                     <a href="">Shop Now</a>
                   </div>
                   <div>
@@ -126,7 +134,7 @@
                       src="https://cdn.media.amplience.net/i/theory/2.4_W_BLAZERS_FOT"
                       width="200px"
                     />
-                    <h4>Essential Trios</h4>
+                    <h4>Blazers + Jackets</h4>
                     <a href="">Shop Now</a>
                   </div>
                 </div>
@@ -200,15 +208,23 @@
                       src="https://cdn.media.amplience.net/i/theory/2.4_PANTS_FOT_M"
                       width="200px"
                     />
-                    <h4>Style Reset</h4>
+                    <h4>PANTS + PURPOSE</h4>
                     <a href="/menproducts">Shop Now</a>
+                  </div>
+                  <div>
+                    <img
+                      src="https://cdn.media.amplience.net/i/theory/2.4_S+O_FOT_M"
+                      width="200px"
+                    />
+                    <h4>Sweaters + Jackets</h4>
+                    <a href="">Shop Now</a>
                   </div>
                   <div>
                     <img
                       src="https://cdn.media.amplience.net/i/theory/2.4_PP_FOT"
                       width="200px"
                     />
-                    <h4>Essential Trios</h4>
+                    <h4>Precision Ponte</h4>
                     <a href="">Shop Now</a>
                   </div>
                 </div>
