--- a/src/public/styles/checkout.css
+++ b/src/public/styles/checkout.css
@@ -14,6 +14,26 @@ body {
   background: #cecece;
 }
 
+#shoppingnames {
+  width: 35%;
+  margin: 30px auto;
+  display: flex;
+  align-items: center;
+  font-size: 13px;
+  font-weight: 600;
+  font-family: Theory-web-ul;
+}
+
+.arr {
+  margin-left: 40px;
+  margin-right: 20px;
+  font-size: 16px;
+  color: gray;
+}
+
+#grayclr {
+  color: gray;
+}
 #vmain {
   /* border: 1px solid black; */
   width: 85%;
@@ -93,6 +113,12 @@ body {
 
 #vcartshow > div:first-child {
   flex: 2;
+  overflow: hidden;
+  /* height: 60vh;
+  overflow-y: auto; */
+}
+
+#product_table {
   height: 60vh;
   overflow-y: auto;
 }
@@ -517,10 +543,10 @@ th {
 }
 
 #vamountshow {
-  width: 61%;
+  /* width: 61%; */
   margin-left: 2%;
   border-top: 1px solid #a5a5a5;
-  margin-top: -10px;
+  /* margin-top: -10px; */
   height: 60px;
   display: flex;
   padding: 10px;
