--- a/src/views/ejs/signup.ejs
+++ b/src/views/ejs/signup.ejs
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../styles/asignup.css" />
   </head>
   <body>
+    <div id="loader" class="center"></div>
     <%- include("navbar.ejs",{bags}) -%>
     <div id="ak-account">
       <a id="ak-h1" href="#" class="ak-account"><h1>ACCOUNT</h1></a>
