--- a/src/public/styles/admin.css
+++ b/src/public/styles/admin.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 .main {
   width: 100%;
@@ -8,8 +10,19 @@ ul {
   list-style: none;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f6f4f5;
+}
+::-webkit-scrollbar-thumb {
+  background: #cecece;
+}
 .sidemenu {
-  width: 240px;
+  width: 236px;
+  padding: 10px 0;
   border: 1px solid black;
   height: 99vh;
   background: black;
@@ -25,15 +38,51 @@ ul {
   justify-content: center;
   gap: 20px;
   color: #fff;
+  margin-top: -15px;
+}
+.productlinks a {
+  color: #fff;
+  text-decoration: none;
 }
 
-.title h3 {
-  font-size: 25px;
+.productTable {
+  width: 100%;
+  text-align: center;
+  border-collapse: collapse;
+}
+
+.productTable thead th {
+  border: 1px solid #ccc;
+  padding: 10px 20px;
+  background-color: #333;
+  color: #fff;
+}
+.productTable tbody td {
+  border: 1px solid #ccc;
+}
+
+.productlinks li {
+  width: 100%;
+  margin-left: -40px;
+  padding: 15px 20px;
+  cursor: pointer;
+}
+
+.profile {
+  display: flex;
+  align-items: center;
+}
+
+.productlinks li:hover {
+  background-color: snow;
+  color: #333;
+}
+.productlinks li:hover a {
+  color: #333;
 }
 
 .right_div {
   flex: 1;
-  border: 1px solid black;
   width: 82%;
   margin-left: 17.5%;
 }
@@ -41,8 +90,10 @@ ul {
 .navbar {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   height: 50px;
-  border: 1px solid black;
+  padding: 0 10px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .container {
@@ -50,15 +101,41 @@ ul {
 }
 .products_boxes {
   display: flex;
+  /* font-family: Theory-web-ul; */
   justify-content: space-between;
+  align-items: center;
   gap: 20px;
+  text-align: center;
 }
 
 .products_boxes > div {
   width: 40%;
   height: 150px;
-  border: 1px solid black;
-  border-radius: 3px;
+  color: #fff;
+  border-radius: 5px;
+  font-size: 18px;
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+.products_boxes > div:first-child {
+  background: radial-gradient(#1fe4f5, #3fbafe);
+}
+.products_boxes > div:nth-child(2) {
+  background: radial-gradient(#fbc1cc, #fa99b2);
+}
+.products_boxes > div:nth-child(3) {
+  background: radial-gradient(#76b2fe, #b69efe);
+}
+.products_boxes > div:last-child {
+  background: radial-gradient(#60efbc, #58d5c9);
+}
+
+.products_boxes > div h2 {
+  margin-top: 15%;
+}
+.products_boxes > div p {
+  font-size: 35px;
+  margin-top: -15px;
 }
 
 .big_boxes {
@@ -69,8 +146,10 @@ ul {
 .big_boxes > div {
   width: 50%;
   height: 50vh;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin-top: 20px;
+  border-radius: 3px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .add_product {
@@ -102,4 +181,17 @@ ul {
 
 .add_product select {
   padding: 10px 15px;
+}
+
+.chart {
+  width: 100%;
+  /* height: 100%; */
+  display: flex;
+  justify-content: center;
+  /* border: 1px solid black; */
+}
+
+#myChart {
+  width: 60% !important;
+  height: 60% !important;
 }
