--- a/src/views/ejs/admin.ejs
+++ b/src/views/ejs/admin.ejs
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>Admin Page</title>
+    <title>Document</title>
     <link rel="stylesheet" href="../styles/font.css" />
     <link rel="stylesheet" href="../styles/admin.css" />
     <link
