--- a/src/views/ejs/signup.ejs
+++ b/src/views/ejs/signup.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>user's details | Theory</title>
     <link
       rel="shortcut icon"
@@ -14,7 +15,6 @@
     <link rel="stylesheet" href="../styles/asignup.css" />
   </head>
   <body>
-    <div id="loader" class="center"></div>
     <%- include("navbar.ejs",{bags}) -%>
     <div id="ak-account">
       <a id="ak-h1" href="#" class="ak-account"><h1>ACCOUNT</h1></a>
@@ -213,7 +213,13 @@
             </div>
             <div class="field btn">
               <div class="btn-layer"></div>
-              <input type="submit" value="REGISTER" id="ak-status-check-btn" />
+              <input
+                type="submit"
+                value="REGISTER"
+                id="ak-status-check-btn"
+                class="signbtn"
+              />
+              <div class="loading"></div>
             </div>
           </form>
           <!------ Create Account Form end ------->
@@ -243,3 +249,4 @@
 
 <script type="text/javascript" src="../scripts/header.js"></script>
 <script src="../scripts/asignup.js"></script>
+<script></script>
